# gigachat

./: .gitignore  Cargo.toml  Readme.md  dgg-emotes.css  dgg-flairs.json  rustfmt.toml  yt-chat-monitor-tampermonkey.js
.github/workflows/: release.yml
src/: app.rs  emotes.rs  error_util.rs  lib.rs  lib.rs_  main.rs  mod_selected_label.rs  provider.rs  test.rs  twitch.rs  ui.rs
src/emotes/: fetch.rs  imaging.rs
src/provider/: channel.rs  dgg.rs  twitch.rs  youtube.rs  youtube_server.rs
src/ui/: addtl_functions.rs  channel_tabs.rs  chat.rs  chat_estimate.rs  chat_frame.rs  config_menus.rs  consts.rs  emote_selector.rs  models.rs  template_app.rs  user_chat_history.rs
