[package]
name = "gigachat"
version = "0.1.1"
edition = "2021"
license = "MPL-2.0"

[features]
default = ["persistence", "native-tls" ]
use-bevy = [ "bevy", "bevy_egui" ]
persistence = ["eframe/persistence"]
native-tls = ["tokio-tungstenite/native-tls"]
webp = ["webp-animation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.0"
tokio = { version = "1.17.0", features = ["full"] }
egui = { version = "0.18.0" }
eframe = "0.18.0"
irc = { version = "0.15.0", features = ["default"]}
anyhow = "1.0.0"
args = "2.0.0"
env_logger = "0.7.0"
getopts = "0.2.0"
curl = "0.4.38"
serde_json = "1.0"
failure = "0.1.8"
rand = "0.8.4"
chrono = "0.4.7"
hex = "0.4.3"
image = "0.24.1"
imageproc = "0.23.0"
glob = "0.3.0"
itertools = "0.10.3"
gif = "0.11.3"
webp-animation = { version = "0.6.0", optional = true }
gif-dispose = "3.1.1"
regex = "1.5.5"
async-channel = "1.6.1"
serde = "1.0.136"
directories-next = "2.0.0"
sha256 = "1.0.3"
base64 = "0.13.0"
tokio-tungstenite = "0.17.1"
httparse = "1.7.1"

bevy = { version = "0.7", default-features = false, features = ["bevy_render", "bevy_core_pipeline"], optional = true }
bevy_egui = { path = "../bevy_egui", optional = true }

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]
egui = { git = "https://github.com/dbckr/egui", branch = "shift-enter-newline" }
eframe = { git = "https://github.com/dbckr/egui", branch = "shift-enter-newline" }
#egui = { path = "../egui/egui" }
#eframe = { path = "../egui/eframe" }
weezl = { git = "https://github.com/dbckr/lzw", branch = "decode-without-starting-clear-code" }
winit = { path = "../winit" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"

[profile.bench]
debug = true