[package]
name = "gigachat"
version = "0.1.3"
edition = "2021"
license = "MPL-2.0"

[features]
default = ["native-tls", "persistence" ]
native-tls = ["tokio-tungstenite/native-tls"]
persistence = [ "eframe/persistence" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys = "0.3.58"
futures = "0.3.0"
tokio = { version = "1.17.0", features = ["full"] }
egui = { version = "0.18" }
eframe = { version = "0.18.0", features = ["wgpu"] }
irc = { version = "0.15.0", features = ["default"]}
anyhow = "1.0.58"
args = "2.0.0"
getopts = "0.2.0"
curl = "0.4.38"
serde_json = "1.0"
rand = "0.8.4"
chrono = "0.4.7"
hex = "0.4.3"
image = "0.24.1"
imageproc = "0.23.0"
glob = "0.3.0"
itertools = "0.10.3"
gif = "0.11.3"
webp-animation = "0.6.0"
gif-dispose = "3.1.1"
regex = "1.5.5"
async-channel = "1.6.1"
serde = "1.0.136"
directories-next = "2.0.0"
sha256 = "1.0.3"
base64 = "0.13.0"
tokio-tungstenite = "0.17.1"
httparse = "1.7.1"
#thiserror = "1.0.31"
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
tracing-appender = "0.2.2"

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]
egui = { git = "https://github.com/dbckr/egui", branch = "shift-enter-newline" }
eframe = { git = "https://github.com/dbckr/egui", branch = "shift-enter-newline" }
#egui = { path = "../egui/egui" }
#eframe = { path = "../egui/eframe" }
#weezl = { git = "https://github.com/dbckr/lzw", branch = "decode-without-starting-clear-code" }
#winit = { path = "../winit" }

# webp compile issue
# https://github.com/qnighy/libwebp-sys2-rs/issues/12
libwebp-sys2 = { git = "https://github.com/qnighy/libwebp-sys2-rs", tag = "v0.1.2" }
# also could do:
# cargo update -p libwebp-sys2 --precise 0.1.2

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"

[profile.bench]
debug = true