[package]
name = "gigachat"
version = "0.3.3"
edition = "2021"
license = "MPL-2.0"

[features]
default = ["native-tls", "persistence" ]
native-tls = ["tokio-tungstenite/native-tls"]
persistence = [ "eframe/persistence" ]
debug-ui = []

[dependencies]
web-sys = "0.3.61"
futures = "0.3.26"
tokio = { version = "1.25.0", features = ["rt", "rt-multi-thread", "macros"] }
egui = { version = "0.23.0" }
eframe = { version = "0.23.0", features = ["wgpu"] }
#irc = { version = "0.15.0", features = ["default"]}
irc = { path = "../irc" }
anyhow = { version = "1.0.71" }
args = "2.2.0"
getopts = "0.2.21"
reqwest = { version = "0.11.17", features = ["gzip", "brotli"] }
serde_json = "1.0.96"
rand = "0.8.5"
chrono = "0.4.7"
hex = "0.4.3"
image = "0.24.6"
imageproc = "0.23.0"
glob = "0.3.1"
itertools = "0.11.0"
gif = "0.12.0"
webp-animation = "0.8.0"
gif-dispose = "4.0.0"
regex = "1.8.1"
async-channel = "1.8.0"
serde = "1.0.160"
directories-next = "2.0.0"
sha256 = "1.1.3"
base64 = "0.21.0"
tokio-tungstenite = "0.20.0"
httparse = "1.8.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-appender = "0.2.2"
tracing-test = "0.2.4"
tracing-unwrap = { version = "0.10.0", features = ["log-location" ] }
warp = "0.3.3"
resvg = "0.35.0"
usvg = "0.35.0"
tiny-skia = "0.10.0"
urlencoding = "2.1.2"
backoff = { version = "0.4.0", features = ["tokio"] }
ahash = "0.8.3"
num_cpus = "1.15.0"
libwebp-sys2 = "0.1.2"
egui_extras = { version = "0.23.0", features = ["all_loaders"] }
tracing-log = "0.2.0"

[profile.release]
#opt-level = 2 # fast and small wasm
debug = 0

[patch.crates-io]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"

[profile.bench]
#debug = true